# amazon-scraper

./: .gitignore  Makefile  pyproject.toml  run.sh
amazon_scraper/: amazon_scraper.py  main.py  scrape_utility.py  utility.py  workflow.py
amazon_scraper/configuration/: __init__.py  config.py  inject.py  utility.py
amazon_scraper/scripts/: main.py
config/: config.yml  options.yaml  selectors.yaml
tests/: amazon_scraper_test.py  config.yml  conftest.py  debug_test.py  get_reviews_test.py  profile_config.yml  profile_workflow.py  scrape_utility_test.py  utility_test.py
